# playground

./: .gitignore  README.md
SonarQube/: docker-compose.yml
aseprite/udemy_training/: 16px_char.aseprite  16px_char_static.aseprite  8px_char.aseprite  8px_skeleton.aseprite  walk_32px.aseprite
bun/: add.rs  bun.lockb  index.ts  libadd.dylib
c/C_crash_course/: readme.md
c/CorridaDeLesma/: race.c
c/another_linked/: diagrama.plantuml
c/binary_tree/: Makefile  binary_tree
c/calcula_area/: index.html.1  index.html.2  main.c
c/coiso/: app  bin  vector.c
c/coiso_de_git/: readme.md
c/compiler/: coisa.md  main.c
c/data_structure_study/: myapp
c/extra/: Makefile
c/getInt/: getInt  getInt.c
c/grid_draw/: grid_draw
c/house_calculator/: .gitignore
c/kilometer_to_mach/: .gitignore  readme.md
c/linked_list/: linked_list.c
c/prime_number_counter/: Makefile
c/rinha_baixo_nivel/: .gitignore  Makefile  README.md
c/test/: Makefile  testea
c/test_os_search/: bin  main.c
c/time_calculator/: time_calculator  (+1 more)
c_playground/: readme.md
cpp_playground/: readme.md
deno/: recursion.js
deno_playground/: readme.md
docker/: docker-compose.yml
go/: .gitignore
godot/: .editorconfig  .gitignore  LICENSE  readme.md
godot_playground/: .gitignore  readme.md
java/: README.md
lmms/: .zynaddsubfxXML.cfg  recover.mmp  recover.mmp.bak
nes_playground/: .gitignore
python/: bubbling_sort.py  ordem.py
ruby_playground/: readme.md
rust/: .gitignore  readme.md
rust_playground/youtube_pikachu_volley/: Cargo.toml
swift/: .gitignore  Tokyo_Alt_2.gpx
(+9023 files in other folders)
