[package]
name = "youtube_pikachu_volley"
version = "0.1.0"
authors = ["Jeferson 'Shin' <shin.jef@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = {
  version = "0.15.3",
  features = ["metal"]
}
